k8s/06-testapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapi
  namespace: default
spec:
  selector:
    app: testapi
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 31884
    protocol: TCP
