k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api
  namespace: default
spec:
  type: NodePort
  selector:
    app: test-api
  ports:
    - port: 80
      targetPort: 8080      # veya container hangi portta dinliyorsa
      nodePort: 30081
