k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-api
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: test-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-api
                port:
                  number: 80
